<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arnastofnun.idordabanki.ResultsScreen" >
    <item android:id="@+id/search"
        android:title="@string/search_hint"
        android:icon="@drawable/ic_action_search_light"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_action_filter"
        android:orderInCategory="98"
        android:showAsAction="ifRoom"
    />
</menu>
