<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.cthulhu.ordabankiforandroid.SelectLanguageActivity">

    <ImageView
        android:contentDescription="@string/splashimage"
        android:id="@+id/SelectLanguageActivity.logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/splash"/>

    <TextView
        android:id="@+id/SelectLanguageActivity.welcometext"
        android:text="@string/welcometext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:gravity="center"/>


    <ImageButton
        android:id="@+id/SelectLanguageActivity.icelandic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_iceland"
        android:padding="0dp"
        android:layout_marginTop="200dp"
        android:scaleType="fitXY"
        android:layout_marginLeft="50dp"
        android:background="@color/white"
        />

    <ImageButton
        android:id="@+id/SelectLanguageActivity.english"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_united_kingdom"
        android:layout_alignParentRight="true"
        android:padding="0dp"
        android:background="@color/white"
        android:layout_marginTop="200dp"
        android:scaleType="fitXY"
        android:layout_marginRight="50dp"
        />

    <TextView
        android:id="@+id/SelectLanguageActivity.selectlanguagetext"
        android:text="@string/selectlanguage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:scaleType="fitCenter"
        android:textSize="20sp"
        android:gravity="center" />

</RelativeLayout>
